Closed Bug 1444363 Opened 8 years ago Closed 7 years ago

Intermittent dom/media/tests/mochitest/test_peerConnection_basicH264Video.html | unexpected-crash-dump-found - This test left crash dumps behind, but we weren't expecting it to!

Categories

(Core :: WebRTC: Audio/Video, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox60 --- fixed
firefox61 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: bwc)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

It is possible that the patch on bug 1407653 might fix this. Looking into it.
Assignee: nobody → docfaraday
Yeah, the patch from bug 1407653 fixes this. I may be able to create a simpler patch though.
Attachment #8968243 - Flags: review?(cpearce)
Attachment #8968243 - Flags: review?(cpearce) → review?(bvandyk)
Passing review to Bryce, as I'm moving off media.
Comment on attachment 8968243 [details] Bug 1444363: Don't dispatch Encode/Decode to main in the fake h264 impl, because the callsite is on main in the first place. https://reviewboard.mozilla.org/r/236932/#review243400 LGTM
Attachment #8968243 - Flags: review?(bvandyk) → review+
Pushed by bcampen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e4c4c8159924 Don't dispatch Encode/Decode to main in the fake h264 impl, because the callsite is on main in the first place. r=bryce
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
This only touches a file used for testing, so AFAICT this can land a=test-only on Beta.
Whiteboard: [checkin-needed-beta]
This doesn't disable a test; it fixes it though.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: