Bug 1444363: Don't dispatch Encode/Decode to main in the fake h264 impl, because the callsite is on main in the first place. r=bryce

MozReview-Commit-ID: Iznr1jNr75Z